--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,10 +20,10 @@ import { BlogPost, Body } from "$lib/components";
 		</div>
 	</section>
 
-	<div class="heading-link">
-		<h6>Latest blogs</h6>
+	<section class="heading-link">
+		<strong>Latest blogs</strong>
 		<a href="/blog">See all</a>
-	</div>
+	</section>
 
 	<BlogPost count={6} />
 </Body>
