--- a/src/lib/css/main.css
+++ b/src/lib/css/main.css
@@ -1,20 +1,20 @@
 @import url(./fonts.css);
 @import url(./vars.css);
 @import url(./headings.css);
-@import url(./card.css);
 
 * {
   margin: 0;
   box-sizing: border-box;
   will-change: transform;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .content {
-  padding-block-start: 2rem;
+  padding-block-start: 1rem;
   padding-block-end: 4rem;
 
   --padding-inline: 1rem;
-  --padding-breakout: 3rem;
+  --padding-breakout: 4rem;
   --content-width: 55ch;
 
   display: grid;
@@ -49,7 +49,7 @@
 }
 
 .disable {
-  color: lightgray;
+  color: var(--color-on-surface-variant);
 }
 
 .bold {
@@ -82,7 +82,7 @@
   width: 100%;
   height: 2px;
   border-radius: 10px;
-  background-color: gray;
+  background-color: var(--color-on-surface-variant);
 }
 
 img {
@@ -96,11 +96,6 @@ img {
   vertical-align: middle;
   margin-inline: auto;
   margin-bottom: var(--margin-bottom);
-}
-
-picture {
-  display: block;
-  overflow: hidden;
 }
 
 ul, ol {
