--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -47,18 +47,15 @@ const { data } = post;
   <div class="divider breakout"></div>
 
   <section>
-    <h5>Table of contents</h5>
-
+    <p>
+      <strong>Table of contents</strong>
+    </p>
     {
       headings.map((heading) => {
         return (
           <ul>
             <li>
-              <h6 class="no-mb">
-                <a href={`#${heading.slug}`} class="no-underline">
-                  {heading.text}
-                </a>
-              </h6>
+              &bull; <a href={`#${heading.slug}`}>{heading.text}</a>
             </li>
           </ul>
         );
@@ -74,7 +71,8 @@ const { data } = post;
 <script>
   //@ts-ignore
   import ColorThief from "colorthief";
-  import { convert } from "colvertize";
+  //@ts-ignore
+  import convert from "color-convert";
 
   const colorThief = new ColorThief();
   const img = document.querySelector("img.hero") as HTMLImageElement;
@@ -85,38 +83,17 @@ const { data } = post;
     if (!img || !img.src) return;
 
     const dominantRGB = colorThief.getPalette(img)[2];
-    const tertiaryRGB = colorThief.getColor(img);
+    const dominantHSL = convert.rgb.hsl(dominantRGB);
 
-    const rgbToHex = (rgb: string[]) =>
-      "#" +
-      rgb
-        .map((x) => {
-          //@ts-ignore
-          const hex = x.toString(16);
-          return hex.length === 1 ? "0" + hex : hex;
-        })
-        .join("");
+    const bg_color = convert.hsl.hex(dominantHSL[0], 20, 20);
+    const on_bg_color = convert.hsl.hex(dominantHSL[0], 100, 90);
+    const on_bg_color_alt = convert.hsl.hex(dominantHSL[0] + 180, 100, 90);
 
-    const dominantHex = rgbToHex(dominantRGB);
-    const dominantHSL = convert(dominantHex, "hsl");
+    root.style.setProperty("--bg-color", "#" + bg_color);
+    root.style.setProperty("--on-bg-color", "#" + on_bg_color);
+    root.style.setProperty("--on-bg-color-alt", "#" + on_bg_color_alt);
 
-    const tertiaryHex = rgbToHex(tertiaryRGB);
-    const tertiaryHSL = convert(tertiaryHex, "hsl");
-
-    const dh = (dominantHSL.h * 100).toFixed(2);
-    const s = 12;
-    const l = 18;
-
-    const th = (tertiaryHSL.h * 100).toFixed(2);
-
-    const bg_gradient = document.querySelector("body") as HTMLBodyElement;
-
-    root.style.setProperty("--bg-color", `${dh}, ${s}%, ${l}%`);
-    root.style.setProperty("--on-bg-color", `${dh}, 90%, 85%`);
-    root.style.setProperty("--bg-color-alt", `${th}, ${s}%, ${l}%`);
-    root.style.setProperty("--on-bg-color-alt", `${th}, 90%, 85%`);
-
-    bg_gradient.animate([{ height: "0" }, { height: "120vh" }], {
+    document.querySelector("body")!.animate([{ height: "120vh" }], {
       delay: 500,
       duration: 500,
       easing: "ease-out",
@@ -125,22 +102,16 @@ const { data } = post;
     });
   }
 
-  if (img.complete) {
-    setBgColorOnRoot(img);
-  } else {
-    img.addEventListener("load", function () {
-      setBgColorOnRoot(img);
-    });
-  }
+  if (img.complete) setBgColorOnRoot(img);
+  else img.addEventListener("load", () => setBgColorOnRoot(img));
 </script>
 
 <style>
-  h1,
-  h1 :not(.prose) {
+  h1 {
     background-image: linear-gradient(
       to right,
-      hsl(var(--on-bg-color, var(--on-background))),
-      hsl(var(--on-bg-color-alt, var(--on-background)))
+      var(--on-bg-color, var(--on-background)),
+      var(--on-bg-color-alt, var(--on-background))
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
