--- a/src/lib/css/headings.css
+++ b/src/lib/css/headings.css
@@ -1,37 +1,30 @@
-h1, h2, h3 {
-  margin-bottom: 2rem;
-}
+@import url(./typescale.css);
+@import url(./spacescale.css);
 
 h1 {
-  font-size: var(--fs-h1);
+  font-size: var(--step-4);
   line-height: 1.25;
 }
 
 h2 {
-  font-size: var(--fs-h2);
+  font-size: var(--step-2);
   line-height: 1.5;
 }
 
 h3 {
-  font-size: var(--fs-h3);
+  font-size: var(--step-3);
 } 
 
 h4, h5 {
-  font-size: var(--fs-h4_h5);
-  margin-bottom: 1.25rem;
+  font-size: var(--step-1);
 }
 
 h6 {
-  font-size: var(--fs-body);
-  margin-bottom: 1rem;
-}
-
-hgroup {
-  margin-bottom: var(--margin-bottom);
+  font-size: var(--step-0);
 }
 
 hgroup > :first-child {
-  margin-bottom: 0.5rem;
+  margin-bottom: var(--space-3xs);
 }
 
 hgroup > :last-child {
@@ -39,66 +32,55 @@ hgroup > :last-child {
 }
 
 a {
-  color: var(--color-secondary);
-  text-underline-offset: 0.25rem;
+  color: var(--color-tertiary);
+  text-underline-offset: 4px;
+  text-decoration-color: var(--color-surface-variant);
+  text-decoration-thickness: 1..5 px;
 }
 
-p {
-  margin-bottom: var(--margin-bottom);
+a:visited {
+  color: var(--color-on-background);
 }
 
 small {
-  font-size: var(--fs-small);
+  font-size: var(--step--1);
 }
 
 pre, code {
   font-family: Lotion, meslo, 'Courier New', Courier, monospace;
-  font-size: var(--fs-code);
+  font-size: calc(var(--step-0) - 1px);
 }
 
 pre {
-  background-color: rebeccapurple;
+  background-color: var(--color-surface-variant);
+  color: var(--color-on-surface-variant);
+
   padding: var(--inner-padding);
-  margin-bottom: var(--margin-bottom);
   border-radius: var(--border-radius);
   line-height: 1.5;
+  tab-size: 2;
 }
 
 code {
+  background-color: var(--color-surface-variant);
+  color: var(--color-on-surface-variant);
+
   padding: 0.25rem;
   border-radius: 0.25rem;
-  font-size: calc(var(--fs-code) - 0.125rem);
   line-height: inherit;
 }
 
 pre code {
   padding: 0px;
   background-color: inherit;
-  font-size: inherit;
+  color: inherit;
 }
 
-@media (max-width: 576px) {
-  h1 {
-    font-size: 2.5rem;
-    line-height: 1.25;
+@media (min-width: 576px) {
+  a {
+    text-decoration-thickness: 1px;
   }
-  
-  h2 {
-    font-size: 2rem;
-    line-height: 1.5;
-  }
-  
-  h3 {
-    font-size: 1.5rem;
-  } 
-  
-  h4, h5 {
-    font-size: 1.25rem;
-    margin-bottom: 1.5rem;
-  }
-  
-  h6 {
-    font-size: 1.025rem;
-    margin-bottom: 1.25rem;
+  pre, code {
+    font-size: var(--step--1);
   }
 }
