--- a/src/lib/css/main.css
+++ b/src/lib/css/main.css
@@ -4,6 +4,7 @@
 
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
   will-change: transform;
   -webkit-tap-highlight-color: transparent;
@@ -14,8 +15,8 @@
   padding-block-end: 4rem;
 
   --padding-inline: 1rem;
-  --padding-breakout: 4rem;
-  --content-width: 55ch;
+  --padding-breakout: var(--space-l);
+  --content-width: calc(32rem + (var(--padding-breakout) * 2));
 
   display: grid;
   grid-template-columns: 
@@ -48,19 +49,33 @@
   grid-template-columns: inherit;
 }
 
-.disable {
+.content > .full-width-img {
+  grid-column: full-width;
+}
+
+.content > .hero-img {
+  grid-column: full-width;
+}
+
+@media (min-width: 576px) {
+  .content > .hero-img {
+    grid-column: content;
+  }
+}
+
+.muted {
   color: var(--color-on-surface-variant);
 }
 
-.bold {
+.font-bold {
   font-weight: 700;
 }
 
-.medium {
+.font-medium {
   font-weight: 500;
 }
 
-.bolder {
+.font-bolder {
   font-weight: 900;
 }
 
@@ -73,22 +88,29 @@
 }
 
 .big-img-h {
-  max-height: 720px;
+  max-height: 600px;
 }
 
 .divider {
-  margin-bottom: var(--margin-bottom);
+  margin-bottom: var(--space-s);
   display: block;
   width: 100%;
-  height: 2px;
+  height: 1.5px;
   border-radius: 10px;
-  background-color: var(--color-on-surface-variant);
+  background-color: var(--color-surface-variant);;
+}
+
+.draft {
+  background-color: var(--color-secondary);
+  color: var(--color-on-secondary);
+  font-weight: 600;
+  padding: 0.025rem var(--space-3xs);
+  border-radius: var(--space-3xs);
 }
 
 img {
   max-width: 100%;
   height: auto;
-  max-height: 600px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -107,11 +129,28 @@ section {
   margin-bottom: var(--margin-bottom);
 }
 
-.md > :is(ul, ol) {
+.md :is(ul, ol) {
   list-style: initial;
   padding-left: 5%;
 }
 
-.md > :is(img) {
+.md :is(img) {
   max-height: none;
+}
+
+.md pre {
+  grid-column: breakout !important;
+}
+
+/* margins */
+h1, h2, h3 {
+  margin-bottom: var(--space-m);
+}
+
+h4, h5, h6, p, div, ul, ol, article, img, picture, figure, pre, hgroup, section {
+  margin-bottom: var(--space-s);
+}
+
+li{
+  margin-bottom: var(--space-2xs);
 }
