--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -20,23 +20,17 @@ const { data } = post;
 <Body>
   <hgroup>
     <h1>{data.title}</h1>
-    <small class="disable"
-      >{minutesRead} &bull; <Date date={data.date} />
-    </small>
+    <small class="muted">{minutesRead} &bull; <Date date={data.date} /></small>
   </hgroup>
+
+  <p class="muted">{data.description}</p>
 
   {
     data.image && (
       <>
-        <Img
-          src={data.image.src}
-          width="1024"
-          height="600"
-          alt="My post"
-          class="hero full-width"
-        />
+        <Img src={data.image.src} width="800" alt="My post" class="hero-img" />
         {data.image.credit && data.image.link && (
-          <figcaption>
+          <figcaption class="muted">
             {data.image.credit}. <a href={data.image.link}>Link here.</a>
           </figcaption>
         )}
@@ -50,17 +44,17 @@ const { data } = post;
     <p>
       <strong>Table of contents</strong>
     </p>
-    {
-      headings.map((heading) => {
-        return (
-          <ul>
+    <ul>
+      {
+        headings.map((heading) => {
+          return (
             <li>
               &bull; <a href={`#${heading.slug}`}>{heading.text}</a>
             </li>
-          </ul>
-        );
-      })
-    }
+          );
+        })
+      }
+    </ul>
   </section>
 
   <section class="md full-width">
@@ -75,19 +69,19 @@ const { data } = post;
   import convert from "color-convert";
 
   const colorThief = new ColorThief();
-  const img = document.querySelector("img.hero") as HTMLImageElement;
+  const img = document.querySelector("img.hero-img") as HTMLImageElement;
 
   function setBgColorOnRoot(img: HTMLImageElement) {
     const root = document.querySelector(":root") as HTMLElement;
 
     if (!img || !img.src) return;
 
-    const dominantRGB = colorThief.getPalette(img)[2];
-    const dominantHSL = convert.rgb.hsl(dominantRGB);
+    const rgb = colorThief.getColor(img);
+    const hsl = convert.rgb.hsl(rgb);
 
-    const bg_color = convert.hsl.hex(dominantHSL[0], 20, 20);
-    const on_bg_color = convert.hsl.hex(dominantHSL[0], 100, 90);
-    const on_bg_color_alt = convert.hsl.hex(dominantHSL[0] + 180, 100, 90);
+    const bg_color = convert.hsl.hex(hsl[0], 20, 20);
+    const on_bg_color = convert.hsl.hex(hsl[0], 100, 90);
+    const on_bg_color_alt = convert.hsl.hex(hsl[0] + 180, 100, 90);
 
     root.style.setProperty("--bg-color", "#" + bg_color);
     root.style.setProperty("--on-bg-color", "#" + on_bg_color);
@@ -110,21 +104,17 @@ const { data } = post;
   h1 {
     background-image: linear-gradient(
       to right,
-      var(--on-bg-color, var(--on-background)),
-      var(--on-bg-color-alt, var(--on-background))
+      var(--on-bg-color, var(--color-on-background)),
+      var(--on-bg-color-alt, var(--color-on-background))
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 
-  section {
-    margin-bottom: var(--margin-bottom);
-  }
   figcaption {
-    margin-top: calc((var(--margin-bottom) - 0.75rem) * -1);
-    margin-bottom: var(--margin-bottom);
-    font-size: var(--fs-small);
-    color: lightgray;
+    margin-bottom: var(--space-s);
+    font-size: var(--step--1);
+    text-align: center;
   }
 
   .prose :global(pre) {
