--- a/src/lib/components/Body.astro
+++ b/src/lib/components/Body.astro
@@ -33,7 +33,7 @@ import config from "$lib/config";
   nav {
     display: flex;
     justify-content: space-between;
-    margin-bottom: var(--margin-bottom);
+    margin-bottom: var(---space-s);
   }
 
   nav a {
@@ -43,7 +43,7 @@ import config from "$lib/config";
 
   html {
     scroll-behavior: smooth;
-    scroll-padding-top: calc(var(--margin-bottom) - 0.5rem);
+    scroll-padding-top: calc(var(---space-s) - 0.5rem);
   }
 
   body {
@@ -65,7 +65,7 @@ import config from "$lib/config";
       "Open Sans",
       "Helvetica Neue",
       sans-serif;
-    font-size: var(--fs-body);
+    font-size: var(--step-0);
     line-height: 1.5;
   }
 
