--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -31,7 +31,7 @@ const { data } = post;
         <Img src={data.image.src} width="800" alt="My post" class="hero-img" />
         {data.image.credit && data.image.link && (
           <figcaption class="muted">
-            {data.image.credit}. <a href={data.image.link}>Link here.</a>
+            {data.image.credit}. <a href={data.image.link}>Link.</a>
           </figcaption>
         )}
       </>
