--- a/src/lib/components/BlogPost.astro
+++ b/src/lib/components/BlogPost.astro
@@ -52,7 +52,7 @@ const { count } = Astro.props;
   section {
     display: grid;
     gap: 2rem;
-    grid-template-columns: repeat(var(--grid-post-count), 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 
   section > article {
@@ -72,7 +72,7 @@ const { count } = Astro.props;
 
   hgroup strong {
     display: inline-block;
-    font-size: var(--fs-h3);
+    font-size: var(--step-1);
     margin-bottom: 1rem;
   }
 
@@ -88,6 +88,10 @@ const { count } = Astro.props;
   }
 
   @media (min-width: 768px) {
+    section {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
     section > article {
       border-bottom: none;
     }
