--- a/src/lib/css/headings.css
+++ b/src/lib/css/headings.css
@@ -7,12 +7,12 @@ h1 {
 }
 
 h2 {
-  font-size: var(--step-2);
+  font-size: var(--step-3);
   line-height: 1.5;
 }
 
 h3 {
-  font-size: var(--step-3);
+  font-size: var(--step-2);
 } 
 
 h4, h5 {
@@ -55,7 +55,7 @@ pre {
   background-color: var(--color-surface-variant);
   color: var(--color-on-surface-variant);
 
-  padding: var(--inner-padding);
+  padding: 1rem;
   border-radius: var(--border-radius);
   line-height: 1.5;
   tab-size: 2;
