--- a/src/lib/components/Body.astro
+++ b/src/lib/components/Body.astro
@@ -33,7 +33,7 @@ import config from "$lib/config";
   nav {
     display: flex;
     justify-content: space-between;
-    margin-bottom: var(---space-s);
+    margin-bottom: var(--space-s);
   }
 
   nav a {
