--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -117,6 +117,7 @@ const { data } = post;
   }
 
   figcaption {
+    margin-top: var(--space-s);
     font-size: var(--step--1);
     text-align: center;
   }
