--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -20,7 +20,7 @@ const { data } = post;
 <Body>
   <hgroup>
     <h1>{data.title}</h1>
-    <p class="muted">{minutesRead} &bull; <Date date={data.date} /></p>
+    <p class="muted"><Date date={data.date} /> &bull; {minutesRead}</p>
   </hgroup>
 
   <p class="muted">{data.description}</p>
@@ -54,7 +54,7 @@ const { data } = post;
         headings.map((heading) => {
           return (
             <li>
-              &bull; <a href={`#${heading.slug}`}>{heading.text}</a>
+              <a href={`#${heading.slug}`}>{heading.text}</a>
             </li>
           );
         })
@@ -73,36 +73,38 @@ const { data } = post;
   //@ts-ignore
   import convert from "color-convert";
 
-  const colorThief = new ColorThief();
-  const img = document.querySelector("img.hero-img") as HTMLImageElement;
+  document.addEventListener("astro:page-load", function () {
+    const colorThief = new ColorThief();
+    const img = document.querySelector("img.hero-img") as HTMLImageElement;
 
-  function setBgColorOnRoot(img: HTMLImageElement) {
-    const root = document.querySelector(":root") as HTMLElement;
+    function setBgColorOnRoot(img: HTMLImageElement) {
+      const root = document.querySelector(":root") as HTMLElement;
 
-    if (!img || !img.src) return;
+      if (!img || !img.src) return;
 
-    const rgb = colorThief.getColor(img);
-    const hsl = convert.rgb.hsl(rgb);
+      const rgb = colorThief.getColor(img);
+      const hsl = convert.rgb.hsl(rgb);
 
-    const bg_color = convert.hsl.hex(hsl[0], 20, 20);
-    const on_bg_color = convert.hsl.hex(hsl[0], 100, 90);
-    const on_bg_color_alt = convert.hsl.hex(hsl[0] + 180, 100, 90);
+      const bg_color = convert.hsl.hex(hsl[0], 20, 20);
+      const on_bg_color = convert.hsl.hex(hsl[0], 100, 90);
+      const on_bg_color_alt = convert.hsl.hex(hsl[0] + 180, 100, 90);
 
-    root.style.setProperty("--bg-color", "#" + bg_color);
-    root.style.setProperty("--on-bg-color", "#" + on_bg_color);
-    root.style.setProperty("--on-bg-color-alt", "#" + on_bg_color_alt);
+      root.style.setProperty("--bg-color", "#" + bg_color);
+      root.style.setProperty("--on-bg-color", "#" + on_bg_color);
+      root.style.setProperty("--on-bg-color-alt", "#" + on_bg_color_alt);
 
-    document.querySelector("body")!.animate([{ height: "120vh" }], {
-      delay: 500,
-      duration: 500,
-      easing: "ease-out",
-      fill: "forwards",
-      pseudoElement: "::after",
-    });
-  }
+      document.querySelector("body")!.animate([{ height: "120vh" }], {
+        delay: 500,
+        duration: 500,
+        easing: "ease-out",
+        fill: "forwards",
+        pseudoElement: "::after",
+      });
+    }
 
-  if (img.complete) setBgColorOnRoot(img);
-  else img.addEventListener("load", () => setBgColorOnRoot(img));
+    if (img.complete) setBgColorOnRoot(img);
+    else img.addEventListener("load", () => setBgColorOnRoot(img));
+  });
 </script>
 
 <style>
