--- a/src/lib/components/Body.astro
+++ b/src/lib/components/Body.astro
@@ -43,7 +43,7 @@ import config from "$lib/config";
 
   html {
     scroll-behavior: smooth;
-    scroll-padding-top: calc(var(---space-s) - 0.5rem);
+    scroll-padding-top: var(--space-s);
   }
 
   body {
@@ -66,7 +66,7 @@ import config from "$lib/config";
       "Helvetica Neue",
       sans-serif;
     font-size: var(--step-0);
-    line-height: 1.5;
+    line-height: 1.6;
   }
 
   body::after {
@@ -83,5 +83,6 @@ import config from "$lib/config";
       var(--bg-color, var(--color-background)),
       var(--color-background)
     );
+    background-color: var(--bg-color, var(--color-background));
   }
 </style>
