--- a/src/lib/css/main.css
+++ b/src/lib/css/main.css
@@ -4,6 +4,7 @@
 
 :root {
   --border-radius: var(--space-2xs);
+  --margin-bottom: var(--space-m);
 }
 
 * {
@@ -97,7 +98,7 @@
 }
 
 .divider {
-  margin-bottom: var(--space-s-m);
+  margin-bottom: var(--margin-bottom);
   display: block;
   width: 100%;
   height: 1.5px;
@@ -138,12 +139,12 @@ h1, h2, h3 {
   margin-bottom: var(--space-m-l);
 }
 
-h4, h5, h6, p, div, ul, ol, article, img, picture, figure, pre, hgroup, section {
-  margin-bottom: var(--space-s-m);
+h4, h5, h6, p, div, ul, ol, article, img, picture, figure, pre, hgroup, section, form {
+  margin-bottom: var(--margin-bottom);
 }
 
 li{
-  margin-inline: var(--space-s-m);
+  margin-inline: var(--margin-bottom);
   margin-bottom: var(--space-s);
 }
 
