--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,9 +2,96 @@
 import { BlogPost, Body } from "$lib/components";
 import { getBlogs } from "$lib/utils";
 
-const blogs = await getBlogs()
+const searchValue = Astro.url.searchParams.get('search') || ''
+
+const blogs = await getBlogs(blog => 
+  blog.data.title.toLowerCase()
+  .includes(searchValue.toLowerCase())
+  ||
+  blog.data.category == searchValue.toLowerCase()
+)
 ---
 
 <Body>
-  <BlogPost {blogs} />
+  <form>
+    <input type="text" name="search" placeholder="Search blogs by title" value={searchValue} />
+    <button>Search</button>
+  </form>
+
+  <div class="divider breakout"></div>
+
+  {blogs.length > 0
+    ? <BlogPost {blogs} />
+    : <h6>No blogs found that matches "<span>{searchValue}</span>".</h6>
+  }
 </Body>
+
+<script>
+  const form = document.querySelector("form")!;
+
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+    const searchValue = formData.get("search")?.toString().trim();
+
+    if (!searchValue || searchValue.startsWith(' ')) return
+
+    location.assign(
+      location.pathname + '?' + new URLSearchParams({ search: searchValue })
+    );
+  });
+</script>
+
+<style>
+  form {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: var(--space-s);
+  }
+
+  button, [role=button] {
+    --clr: var(--color-on-background);
+
+    all: unset;
+    width: auto;
+    padding: var(--space-xs) var(--space-s);
+    font-size: var(--step--1);
+    font-weight: 600;
+    background-color: var(--clr);
+    color: var(--color-background);
+    text-align: center;
+    border-radius: var(--border-radius);
+    border: 2px solid var(--clr);
+    cursor: pointer;
+    transition: transform 250ms ease-out;
+  }
+
+  button:focus {
+    filter: brightness(0.96);
+  }
+
+  button:active {
+    transform: scale3d(0.96, 0.96, 0.96);
+  }
+
+  input {
+    all: unset;
+    display: block;
+    padding: var(--space-xs) var(--space-s);
+    border: 2px solid var(--color-surface-variant);
+    border-radius: var(--border-radius);
+  }
+
+  input:focus {
+    border-color: var(--color-primary);
+  }
+
+  input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+   -webkit-background-clip: text;
+    -webkit-text-fill-color: var(--color-on-background);
+}
+</style>
