--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,8 @@ const blogs = await getBlogs()
 	</section>
 
 	<BlogPost {blogs} count={6} />
+
+	<a href="/blog" role="button">See all</a>
 </Body>
 
 <style>
