--- a/src/lib/components/Date.astro
+++ b/src/lib/components/Date.astro
@@ -8,7 +8,7 @@ function $(date: string | Date | undefined):
       isRelativeTime: boolean;
     }
   | undefined {
-  if (typeof date === "undefined") return;
+  if (typeof date == "undefined") return;
 
   dayjs.extend(relativeTime);
   const givenDate = dayjs(date);
