--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const blogs = await getBlogs()
 		<a href="/blog">See all</a>
 	</section>
 
-	<BlogPost {blogs} count={6} />
+	<!-- <BlogPost {blogs} count={6} /> -->
 
 	<a href="/blog" role="button">See all</a>
 </Body>
