--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import { BlogPost, Body } from "$lib/components";
-import { getBlogs } from "$lib/utils";
+import { Body } from "$lib/components";
+// import { getBlogs } from "$lib/utils";
 
-const blogs = await getBlogs()
+// const blogs = await getBlogs()
 ---
 
 <Body>
