--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import { Body } from "$lib/components";
-// import { getBlogs } from "$lib/utils";
+import { BlogPost, Body } from "$lib/components";
+import { getBlogs } from "$lib/utils";
 
-// const blogs = await getBlogs()
+const blogs = await getBlogs()
 ---
 
 <Body>
@@ -28,7 +28,7 @@ import { Body } from "$lib/components";
 		<a href="/blog">See all</a>
 	</section>
 
-	<!-- <BlogPost {blogs} count={6} /> -->
+	<BlogPost {blogs} count={6} />
 
 	<a href="/blog" role="button">See all</a>
 </Body>
