--- a/src/lib/components/BlogPost.astro
+++ b/src/lib/components/BlogPost.astro
@@ -18,7 +18,6 @@ const { count, blogs } = Astro.props;
         const { minutesRead } = remarkPluginFrontmatter;
         const { data } = post;
         const alt = data.image?.credit || 'Cover photo of the article ' + data.title
-        const date = data?.date || undefined
 
         return (
           <article>
@@ -34,7 +33,7 @@ const { count, blogs } = Astro.props;
             </a>
 
             <small class="muted">
-              <Date {date} onlyDate /> &bull; {minutesRead}
+              <Date date={data.date} onlyDate /> &bull; {minutesRead}
             </small>
           </article>
         );
